fixed layout issue and added animation

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  transition: all 0.3s ease;
 }
 
 :root {
@@ -43,7 +44,7 @@
 }
 
 body {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   background-color: var(--color-bg-low);
   display: grid;
@@ -78,18 +79,20 @@ footer {
   margin-top: auto;
 }
 
-header,
-main,
-footer {
-  padding: 1em;
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  height: 100%;
+}
+
+header,
+main,
+footer {
+  padding: 1em;
+  width: 100vw;
 }
 
 h1,
@@ -104,6 +107,30 @@ h2 {
 
 code {
   font-size: 2em;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 1000px;
+}
+
+.results-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  min-height: 5em;
+}
+
+.code-container .result.active {
+  color: var(--color-accent-light);
+  font-size: 2em;
+  font-weight: bold;
 }
 
 button {
@@ -143,9 +170,7 @@ section {
   grid-auto-rows: auto 1fr auto;
   height: 100vh;
   width: 100vw;
-  align-items: center;
   text-align: center;
-  justify-content: center;
 }
 
 .app[data-clicked='true'] .title {
@@ -177,6 +202,8 @@ section {
 .binary-tree {
   display: grid;
   width: 100%;
+  height: 100%;
+  min-height: 25rem;
   gap: 1em;
   margin-bottom: 2.5em;
   position: relative;
@@ -196,14 +223,16 @@ section {
 .binary-tree div p {
   background-color: var(--color-accent);
   color: white;
-  border-radius: 50px;
+  border-radius: 999px;
   width: fit-content;
   padding: 1em;
   font-size: 1.75em;
+  border: 10px solid transparent;
 }
 
 .binary-tree div p.active {
   background-color: var(--color-accent-light);
+  border: 10px solid var(--color-border);
 }
 
 .binary-tree div p.passive {
